tests/algorithms/x/PHP/data_structures/arrays/product_sum.error
run: exit status 255

Fatal error: Uncaught TypeError: count(): Argument #1 ($value) must be of type Countable|array, int given in /workspace/mochi/tests/algorithms/x/PHP/data_structures/arrays/product_sum.php:9
Stack trace:
#0 /workspace/mochi/tests/algorithms/x/PHP/data_structures/arrays/product_sum.php(20): product_sum(Array, 1)
#1 /workspace/mochi/tests/algorithms/x/PHP/data_structures/arrays/product_sum.php(24): product_sum_array(Array)
#2 {main}
  thrown in /workspace/mochi/tests/algorithms/x/PHP/data_structures/arrays/product_sum.php on line 9
